--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /AlgorithmProject.vcxproj.user
+/AlgorithmProject.vcxproj.filters
+/AlgorithmProject.vcxproj
+/AlgorithmProject.sln
+/.vs
